<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".view.RecuperarSenhaActivity">

    <TextView android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView android:id="@+id/txtRecuperarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtRecuperarSenha"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView android:id="@+id/txtEmailRecuperarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtEmailRecuperarSenha"
        android:textColor="@color/green" />

    <EditText android:id="@+id/editEmailRecuperarSenha"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/editEmailRecuperarSenha"
        android:inputType="text"
        android:textColorHint="@color/black" />

    <Button android:id="@+id/btnRecuperarSenha"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:backgroundTint="@color/lightBlue"
        android:padding="8dp"
        android:text="@string/btnRecuperarSenha"
        android:textStyle="bold" />

    <Button android:id="@+id/btnVoltar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:backgroundTint="@color/lightBlue"
        android:padding="8dp"
        android:text="@string/btnVoltar"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>