<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/txtLogin"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txtEmail"
            android:textColor="@color/green" />

        <EditText
            android:id="@+id/editEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/editEmailLogin"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/txtSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txtSenhaLogin"
            android:textColor="@color/green" />

        <EditText
            android:id="@+id/editSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/editSenhaLogin"
            android:inputType="numberPassword"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ckLembrarLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="lembrarSenha"
                android:padding="9dp"
                android:text="@string/ckLembrarLogin"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtRecuperarSenhaLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:text="@string/txtRecuperarSenhaLogin"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAcessarLogin"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lightBlue"
                android:padding="8dp"
                android:text="@string/btnAcessarLogin"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSejaVipLogin"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/lightBlue"
                android:padding="8dp"
                android:text="@string/btnSejaVipLogin"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtVersaoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txtVersaoApp"
            android:textAlignment="center"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/txtLerPolitica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txtLerPolitica"
            android:textAlignment="center"
            android:textColor="@color/green" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>