<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".view.ClientePessoaFisicaActivity">

    <TextView android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView android:id="@+id/txtPessoaFisica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtPessoaFisica"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView android:id="@+id/txtCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtCPF"
        android:textColor="@color/green" />

    <EditText android:id="@+id/editCPF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/editCPF"
        android:inputType="number"
        android:textColorHint="@color/black" />

    <TextView android:id="@+id/txtNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtNomeCompleto"
        android:textColor="@color/green" />

    <EditText android:id="@+id/editNomeCompleto"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/editNomeCompleto"
        android:inputType="text"
        android:textColorHint="@color/black" />

    <Button android:id="@+id/btnSalvarContinuarPF"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:backgroundTint="@color/lightBlue"
        android:padding="8dp"
        android:text="@string/btnSalvarContinuar"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <Button android:id="@+id/btnVoltarPessoaFisica"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightBlue"
            android:padding="8dp"
            android:text="@string/btnVoltarClienteVip"
            android:textStyle="bold" />

        <Button android:id="@+id/btnCancelarPessoaFisica"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightBlue"
            android:padding="8dp"
            android:text="@string/btnCancelarPessoaFisica"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>